dynamic paths based on settings json

--- a/config/defaultSettings.json
+++ b/config/defaultSettings.json
@@ -1,3 +1,10 @@
 {
-  "port": 8080
+	"paths": {
+		"download":  "/download",
+		"heartbeat": "/heartbeat",
+		"list":      "/list",
+		"static":    "/static",
+		"upload":    "/upload"
+	},
+  "port":        8080
 }
