--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,16 +1,18 @@
 name: Go
 on:
   push:
-    branches: [ "main" ]
+    branches:
+    - main
   pull_request:
-    branches: [ "main" ]
+    branches:
+    - main
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v4.2.2
     - name: Set up Go
-      uses: actions/setup-go@v4
+      uses: actions/setup-go@v5.3.0
       with:
         go-version: '1.24.0'
     - name: Build
