--- a/config/defaultSettings.json
+++ b/config/defaultSettings.json
@@ -9,5 +9,6 @@
 		"static":    "/static",
 		"upload":    "/upload"
 	},
-  "port":        8080
+	"port":        8080,
+	"timeFormat":  "Monday Jan 2 15:04"
 }
