basic auth config

--- a/config/defaultSettings.json
+++ b/config/defaultSettings.json
@@ -1,4 +1,10 @@
 {
+  "auth": {
+    "basic":      "AAAA-BBBB-CCCC-DDDD",
+    "require": {
+      "download": true
+    }
+  },
   "audit": {
     "logFile":    "",
     "timeFormat": "Monday Jan 2 15:04"
