--- a/config/defaultSettings.json
+++ b/config/defaultSettings.json
@@ -12,8 +12,9 @@
     "timeFormat": "Monday Jan 2 15:04"
   },
   "limits": {
-    "downloads":  3,
-    "maxSizeMb":  10
+    "downloads":  1,
+    "maxSizeMb":  20,
+    "uploadsPM":  4
   },
   "paths": {
     "download":   "/download",
