--- a/config/defaultSettings.json
+++ b/config/defaultSettings.json
@@ -16,7 +16,8 @@
     "downloads":  1,
     "duration":   "2m",
     "maxSizeMb":  20,
-    "perMinute":  10
+    "perMinute":  10,
+    "ticker":     "30s"
   },
   "paths": {
     "download":   "/download",
