get page title from config

--- a/config/defaultSettings.json
+++ b/config/defaultSettings.json
@@ -14,7 +14,8 @@
     "timeFormat": "Monday Jan 2 15:04"
   },
   "index": {
-    "style":      false
+    "style":      true,
+    "title":      "gone"
   },
   "limits": {
     "downloads":  1,
