support for turning off messages function

--- a/config/defaultSettings.json
+++ b/config/defaultSettings.json
@@ -28,6 +28,7 @@
     "download":   "/download",
     "heartbeat":  "/heartbeat",
     "list":       "/list",
+    "message":    "/",
     "static":     "/static",
     "upload":     "/upload"
   },
