--- a/config/defaultSettings.json
+++ b/config/defaultSettings.json
@@ -15,7 +15,7 @@
     "timeFormat": "Monday Jan 2 15:04"
   },
   "index": {
-    "theme":      "Dark",
+    "theme":      "auto",
     "title":      "gone"
   },
   "limits": {
