--- a/config/defaultSettings.json
+++ b/config/defaultSettings.json
@@ -15,6 +15,7 @@
     "timeFormat": "Monday Jan 2 15:04"
   },
   "index": {
+    "cookieTime": "192h",
     "theme":      "",
     "themePick":  true,
     "title":      "gone"
