cookie id configuration

--- a/config/defaultSettings.json
+++ b/config/defaultSettings.json
@@ -15,7 +15,10 @@
     "timeFormat": "Monday Jan 2 15:04"
   },
   "index": {
-    "cookieTime": "192h",
+    "cookie": {
+      "id":       "goneTheme",
+      "time":     "192h"
+    },
     "theme":      "",
     "themePick":  true,
     "title":      "gone"
