--- a/config/defaultSettings.json
+++ b/config/defaultSettings.json
@@ -14,6 +14,9 @@
     "logFile":    "",
     "timeFormat": "Monday Jan 2 15:04"
   },
+  "error": {
+    "deny":       "not authorized"
+  },
   "index": {
     "cookie": {
       "id":       "goneTheme",
