move style sheet to assets, declare path in cfg

--- a/config/defaultSettings.json
+++ b/config/defaultSettings.json
@@ -41,6 +41,7 @@
     "ticker":     "30s"
   },
   "paths": {
+    "assets":     "/assets/",
     "download":   "/download/",
     "heartbeat":  "/heartbeat",
     "list":       "/list",
