move messages to own handler, split header tmpl

--- a/config/defaultSettings.json
+++ b/config/defaultSettings.json
@@ -52,7 +52,7 @@
     "download":   "/download/",
     "heartbeat":  "/heartbeat",
     "list":       "/list",
-    "message":    "/",
+    "message":    "/msg",
     "static":     "/static",
     "upload":     "/upload"
   },
