add random handler support

--- a/config/defaultSettings.json
+++ b/config/defaultSettings.json
@@ -75,6 +75,7 @@
     "heartbeat":   "/heartbeat",
     "list":        "/list",
     "message":     "/msg",
+    "random":      "/random",
     "static":      "/static",
     "upload":      "/upload",
     "wall":        "/wall"
