--- a/config/defaultSettings.json
+++ b/config/defaultSettings.json
@@ -75,7 +75,7 @@
     "heartbeat":   "/heartbeat",
     "list":        "/list",
     "message":     "/msg",
-    "random":      "/random",
+    "random":      "/random/",
     "static":      "/static",
     "upload":      "/upload",
     "wall":        "/wall"
