--- a/settings/defaultSettings.json
+++ b/settings/defaultSettings.json
@@ -62,10 +62,11 @@
     }
   },
   "limits": {
+    "charsMsg":    128,
+    "charsWall":   1280,
     "downloads":   1,
     "duration":    "5m",
     "maxSizeMb":   20,
-    "msgChars":    128,
     "perMinute":   30,
     "ticker":      "30s"
   },
