hide footer build info option

--- a/settings/defaultSettings.json
+++ b/settings/defaultSettings.json
@@ -30,6 +30,7 @@
   },
   "index": {
     "csp":         true,
+    "showBuild":   true,
     "title":       "gone",
     "cookie": {
       "id":        "goneTheme",
