--- a/settings/defaultSettings.json
+++ b/settings/defaultSettings.json
@@ -18,6 +18,10 @@
       "wall":      false
     }
   },
+  "default": {
+    "downloads":   1,
+    "duration":    "5m"
+  },
   "error": {
     "copy":        "file copy fail",
     "deny":        "not authorized",
@@ -64,11 +68,9 @@
       ]
     }
   },
-  "limits": {
+  "limit": {
     "charsMsg":    128,
     "charsWall":   1280,
-    "downloads":   1,
-    "duration":    "5m",
     "maxSizeMb":   20,
     "perMinute":   30,
     "ticker":      "30s"
