--- a/settings/defaultSettings.json
+++ b/settings/defaultSettings.json
@@ -70,6 +70,7 @@
   "limit": {
     "charsMsg":    128,
     "charsWall":   1280,
+    "idLength":    32,
     "maxSizeMb":   20,
     "perMinute":   30,
     "ticker":      "30s"
